# zarr-benchmarks

./: README.md  pyproject.toml
src/zarr-benchmarks/: all_equal.py  benchmark.py  empty_chunks.py
