[tool.poetry]
name = "zarr-benchmarks"
version = "0.1.0"
description = "Benchmarking for zarr-python"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
matplotlib = "^3.5.0"
zarr = { git = "https://github.com/zarr-developers/zarr-python.git"}
click = "^8.0.3"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
